--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,10 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'codeowners-check'
+description: 'Check files are covered by CODEOWNERS'
+author: 'Craig Morris'
 inputs:
-  milliseconds: # change this
+  githubToken:
+    description: 'Github Oauth Token for the repo'
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
 runs:
   using: 'node16'
   main: 'dist/index.js'
