--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,12 @@
 name: 'codeowners-check'
 description: 'Check files are covered by CODEOWNERS'
 author: 'Craig Morris'
+
 inputs:
   githubToken:
     description: 'Github Oauth Token for the repo'
     required: true
+
 runs:
-  using: 'node16'
-  main: 'dist/index.js'
+  using: node20
+  main: dist/index.js
